# Kielas_rm_yolo_pose

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
src/data_process/: augment.py  balance.py  main.py  purify.py  visiualize.py
src/data_process/src/: augment.py  balance.py  purify.py  split.py  visiualize.py
src/demo/: demo.py
src/demo/src/: detector.py
src/hik_camera/: hik_camera.py
src/training/: demo.py  export.py  train.py
src/training/src/: __init__.py  augment.py  datasets.py  get_env.py  loss.py  model.py
tools/: background.py  extract_ros2_bag.py  labels.py  negative.py  scaler.py
